--- a/vue-demo/package.json
+++ b/vue-demo/package.json
@@ -19,6 +19,7 @@
     "font-awesome": "^4.7.0",
     "mockjs": "^1.0.1-beta3",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.4",
     "vue-i18n": "^8.6.0",
     "vue-router": "^3.0.1"
   },
@@ -80,7 +81,7 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-dev-server": "^3.1.14",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
